Refine performance measuring.